modificações de estoque e venda