@@ -4,24 +4,24 @@ import com.InovaSkill.CaderninhoDigital.dto.ContatoDTO;
 import com.InovaSkill.CaderninhoDigital.dto.request.ContatoRequestDTO;
 import com.InovaSkill.CaderninhoDigital.dto.request.ItemVendaRequestDTO;
 import com.InovaSkill.CaderninhoDigital.dto.request.VendaRequestDTO;
-import com.InovaSkill.CaderninhoDigital.dto.response.ItemVendaResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.CobrancaResponseDTO;
+import com.InovaSkill.CaderninhoDigital.dto.response.ItemVendaResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.ResumoCobrancasResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.ResumoHistoricoVendasResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.VendaDetalhesResponseDTO;
+import com.InovaSkill.CaderninhoDigital.dto.response.VendaDuplicacaoResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.VendaHistoricoItemResponseDTO;
 import com.InovaSkill.CaderninhoDigital.dto.response.VendaResponseDTO;
-import com.InovaSkill.CaderninhoDigital.dto.response.VendaDuplicacaoResponseDTO;
 import com.InovaSkill.CaderninhoDigital.entity.Cliente;
 import com.InovaSkill.CaderninhoDigital.entity.ItemVenda;
 import com.InovaSkill.CaderninhoDigital.entity.Produto;
 import com.InovaSkill.CaderninhoDigital.entity.Usuario;
 import com.InovaSkill.CaderninhoDigital.entity.Venda;
 import com.InovaSkill.CaderninhoDigital.enums.FormaPagamento;
-import com.InovaSkill.CaderninhoDigital.enums.StatusPagamento;
-import com.InovaSkill.CaderninhoDigital.enums.SituacaoCobranca;
-import com.InovaSkill.CaderninhoDigital.enums.TipoCartao;
 import com.InovaSkill.CaderninhoDigital.enums.OrigemMovimentacaoEstoque;
+import com.InovaSkill.CaderninhoDigital.enums.SituacaoCobranca;
+import com.InovaSkill.CaderninhoDigital.enums.StatusPagamento;
+import com.InovaSkill.CaderninhoDigital.enums.TipoCartao;
 import com.InovaSkill.CaderninhoDigital.enums.TipoMovimentacaoEstoque;
 import com.InovaSkill.CaderninhoDigital.exception.BusinessException;
 import com.InovaSkill.CaderninhoDigital.exception.ConflictException;
@@ -33,6 +33,9 @@ import com.InovaSkill.CaderninhoDigital.repository.projection.ResumoCobrancasPro
 import com.InovaSkill.CaderninhoDigital.repository.projection.ResumoHistoricoVendasProjection;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Subquery;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -41,17 +44,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import jakarta.persistence.criteria.Predicate;
-import jakarta.persistence.criteria.Root;
-import jakarta.persistence.criteria.Subquery;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -68,37 +68,118 @@ public class VendaService {
 
     @Transactional
     public VendaResponseDTO criar(Long usuarioId, VendaRequestDTO dto) {
+
         Usuario gestor = usuarioAcessoService.buscarGestor(usuarioId);
         Cliente cliente = buscarCliente(dto.getClienteId());
 
-        StatusPagamento status = dto.getStatusPagamento() != null ? dto.getStatusPagamento() : StatusPagamento.PENDENTE;
-        validarRegrasNegocio(dto, status);
+        StatusPagamento statusSolicitado =
+                dto.getStatusPagamento() != null
+                        ? dto.getStatusPagamento()
+                        : StatusPagamento.PENDENTE;
+
+        validarRegrasNegocio(dto, statusSolicitado);
+
+        /*
+         * Verifica se existe estoque suficiente para TODOS os produtos.
+         */
+        boolean possuiEstoqueSuficiente = true;
+
+        for (ItemVendaRequestDTO itemDto : dto.getItens()) {
+
+            Produto produto =
+                    buscarProdutoDoGestor(itemDto.getProdutoId(), gestor);
+
+            if (produto.getEstoqueAtual()
+                    .compareTo(itemDto.getQuantidade()) < 0) {
+
+                possuiEstoqueSuficiente = false;
+                break;
+            }
+        }
+
+        /*
+         * Se não houver estoque suficiente, a venda fica PENDENTE.
+         */
+        StatusPagamento statusFinal =
+                possuiEstoqueSuficiente
+                        ? statusSolicitado
+                        : StatusPagamento.PENDENTE;
+
+        /*
+         * Se a venda ficou pendente por falta de estoque e não foi informada
+         * data de vencimento, usamos a data da venda.
+         */
+        LocalDate dataVencimentoFinal = null;
+
+        if (statusFinal == StatusPagamento.PENDENTE) {
+
+            dataVencimentoFinal =
+                    dto.getDataVencimento() != null
+                            ? dto.getDataVencimento()
+                            : dto.getDataVenda();
+        }
 
         Venda venda = Venda.builder()
                 .cliente(cliente)
                 .gestor(gestor)
                 .dataVenda(dto.getDataVenda())
                 .formaPagamento(dto.getFormaPagamento())
-                .statusPagamento(status)
+                .statusPagamento(statusFinal)
                 .observacao(dto.getObservacao())
-                .dataVencimento(status == StatusPagamento.PENDENTE ? dto.getDataVencimento() : null)
-                .tipoCartao(dto.getFormaPagamento() == FormaPagamento.CARTAO ? dto.getTipoCartao() : null)
-                .parcelas(dto.getTipoCartao() == TipoCartao.CREDITO ? dto.getParcelas() : null)
+                .dataVencimento(dataVencimentoFinal)
+                .tipoCartao(
+                        dto.getFormaPagamento() == FormaPagamento.CARTAO
+                                ? dto.getTipoCartao()
+                                : null)
+                .parcelas(
+                        dto.getTipoCartao() == TipoCartao.CREDITO
+                                ? dto.getParcelas()
+                                : null)
                 .valorTotal(BigDecimal.ZERO)
                 .itens(new ArrayList<>())
                 .build();
 
         BigDecimal total = BigDecimal.ZERO;
+
         for (ItemVendaRequestDTO itemDto : dto.getItens()) {
-            Produto produto = buscarProdutoDoGestor(itemDto.getProdutoId(), gestor);
-            BigDecimal estoqueAnterior = produto.getEstoqueAtual();
-            BigDecimal valorUnitario = itemDto.getValorUnitario() != null ? itemDto.getValorUnitario() : produto.getPrecoVenda();
-            BigDecimal valorTotal = valorUnitario.multiply(itemDto.getQuantidade());
-            baixarEstoque(produto, itemDto.getQuantidade());
-            movimentacaoEstoqueService.registrarProduto(
-                    produto, gestor, estoqueAnterior, produto.getEstoqueAtual(),
-                    TipoMovimentacaoEstoque.SAIDA, OrigemMovimentacaoEstoque.VENDA,
-                    dto.getObservacao());
+
+            Produto produto =
+                    buscarProdutoDoGestor(itemDto.getProdutoId(), gestor);
+
+            BigDecimal valorUnitario =
+                    itemDto.getValorUnitario() != null
+                            ? itemDto.getValorUnitario()
+                            : produto.getPrecoVenda();
+
+            BigDecimal valorTotal =
+                    valorUnitario.multiply(itemDto.getQuantidade());
+
+            /*
+             * Só baixa estoque quando TODOS os produtos possuem estoque.
+             *
+             * Assim, uma venda futura não consome estoque que ainda não existe.
+             */
+            if (possuiEstoqueSuficiente) {
+
+                BigDecimal estoqueAnterior =
+                        produto.getEstoqueAtual();
+
+                baixarEstoque(
+                        produto,
+                        itemDto.getQuantidade()
+                );
+
+                movimentacaoEstoqueService.registrarProduto(
+                        produto,
+                        gestor,
+                        estoqueAnterior,
+                        produto.getEstoqueAtual(),
+                        TipoMovimentacaoEstoque.SAIDA,
+                        OrigemMovimentacaoEstoque.VENDA,
+                        dto.getObservacao()
+                );
+            }
+
             ItemVenda item = ItemVenda.builder()
                     .venda(venda)
                     .produto(produto)
@@ -107,35 +188,151 @@ public class VendaService {
                     .valorTotal(valorTotal)
                     .custoConsiderado(produto.getCustoAtual())
                     .build();
+
             venda.getItens().add(item);
+
             total = total.add(valorTotal);
         }
 
         venda.setValorTotal(total);
+
         Venda salva = vendaRepository.save(venda);
-        // A auditoria registra o fato sensível sem serializar dados pessoais do cliente.
-        auditoriaService.registrar(gestor, "VENDA", salva.getId(), "CRIACAO", null, salva.getValorTotal(), dto.getObservacao(), "VENDA");
+
+        auditoriaService.registrar(
+                gestor,
+                "VENDA",
+                salva.getId(),
+                "CRIACAO",
+                null,
+                salva.getValorTotal(),
+                possuiEstoqueSuficiente
+                        ? dto.getObservacao()
+                        : "Venda gravada como PENDENTE por falta de estoque",
+                "VENDA"
+        );
+
         return toResponse(salva);
     }
 
-    private void validarRegrasNegocio(VendaRequestDTO dto, StatusPagamento status) {
-        if (status == StatusPagamento.PENDENTE && dto.getDataVencimento() == null) {
-            throw new BusinessException("Informe a data de vencimento para vendas pendentes");
-        }
-        if (dto.getFormaPagamento() == FormaPagamento.CARTAO) {
-            if (dto.getTipoCartao() == null) {
-                throw new BusinessException("Informe se o pagamento no cartão foi crédito ou débito");
+    /**
+     * Tenta reprocessar vendas que ficaram pendentes por falta de estoque.
+     */
+    @Transactional
+    public void processarVendasPendentesPorEstoque(
+            Produto produto,
+            Usuario gestor
+    ) {
+
+        List<Venda> vendasPendentes =
+                vendaRepository.findAllByOrderByDataVendaDesc()
+                        .stream()
+                        .filter(v ->
+                                v.getStatusPagamento()
+                                        == StatusPagamento.PENDENTE)
+                        .toList();
+
+        for (Venda venda : vendasPendentes) {
+
+            boolean podeConcluir = true;
+
+            for (ItemVenda item : venda.getItens()) {
+
+                Produto produtoVenda = item.getProduto();
+
+                if (produtoVenda.getEstoqueAtual()
+                        .compareTo(item.getQuantidade()) < 0) {
+
+                    podeConcluir = false;
+                    break;
+                }
             }
+
+            if (podeConcluir) {
+
+                for (ItemVenda item : venda.getItens()) {
+
+                    Produto produtoVenda = item.getProduto();
+
+                    BigDecimal estoqueAnterior =
+                            produtoVenda.getEstoqueAtual();
+
+                    baixarEstoque(
+                            produtoVenda,
+                            item.getQuantidade()
+                    );
+
+                    movimentacaoEstoqueService.registrarProduto(
+                            produtoVenda,
+                            gestor,
+                            estoqueAnterior,
+                            produtoVenda.getEstoqueAtual(),
+                            TipoMovimentacaoEstoque.SAIDA,
+                            OrigemMovimentacaoEstoque.VENDA,
+                            "Baixa automática de Venda Pendente por reabastecimento"
+                    );
+                }
+
+                StatusPagamento statusAnterior =
+                        venda.getStatusPagamento();
+
+                venda.setStatusPagamento(StatusPagamento.PAGO);
+
+                Venda salva = vendaRepository.save(venda);
+
+                auditoriaService.registrar(
+                        gestor,
+                        "VENDA",
+                        salva.getId(),
+                        "BAIXA_AUTOMATICA_PENDENTE",
+                        statusAnterior,
+                        StatusPagamento.PAGO,
+                        "Venda pendente baixada com sucesso após reposição de estoque",
+                        "VENDA"
+                );
+            }
+        }
+    }
+
+    private void validarRegrasNegocio(
+            VendaRequestDTO dto,
+            StatusPagamento status
+    ) {
+
+        if (status == StatusPagamento.PENDENTE
+                && dto.getDataVencimento() == null) {
+
+            throw new BusinessException(
+                    "Informe a data de vencimento para vendas pendentes"
+            );
+        }
+
+        if (dto.getFormaPagamento() == FormaPagamento.CARTAO) {
+
+            if (dto.getTipoCartao() == null) {
+
+                throw new BusinessException(
+                        "Informe se o pagamento no cartão foi crédito ou débito"
+                );
+            }
+
             if (dto.getTipoCartao() == TipoCartao.CREDITO
-                    && (dto.getParcelas() == null || dto.getParcelas() < 1)) {
-                throw new BusinessException("Informe a quantidade de parcelas");
+                    && (dto.getParcelas() == null
+                    || dto.getParcelas() < 1)) {
+
+                throw new BusinessException(
+                        "Informe a quantidade de parcelas"
+                );
             }
         }
     }
 
     public List<VendaResponseDTO> listar(Long usuarioId) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        return vendaRepository.findAllByOrderByDataVendaDesc().stream()
+
+        return vendaRepository
+                .findAllByOrderByDataVendaDesc()
+                .stream()
                 .map(this::toResponse)
                 .toList();
     }
@@ -152,44 +349,155 @@ public class VendaService {
             Long clienteId,
             StatusPagamento status
     ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        int tamanhoSeguro = Math.min(Math.max(tamanho, 1), 100);
-        String campoOrdenacao = switch (ordenarPor) {
-            case "valorTotal", "criadoEm" -> ordenarPor;
-            default -> "dataVenda";
-        };
-        Specification<Venda> filtros = (root, query, builder) -> {
-            List<Predicate> predicates = new ArrayList<>();
-            if (inicio != null) predicates.add(builder.greaterThanOrEqualTo(root.get("dataVenda"), inicio));
-            if (fim != null) predicates.add(builder.lessThanOrEqualTo(root.get("dataVenda"), fim));
-            if (clienteId != null) predicates.add(builder.equal(root.get("cliente").get("id"), clienteId));
-            if (status != null) predicates.add(builder.equal(root.get("statusPagamento"), status));
-            return builder.and(predicates.toArray(Predicate[]::new));
-        };
-        PageRequest pageable = PageRequest.of(
-                Math.max(pagina, 0), tamanhoSeguro, Sort.by(direcao, campoOrdenacao).and(Sort.by(direcao, "id")));
-        Page<Venda> paginaEntidades = vendaRepository.findAll(filtros, pageable);
+
+        int tamanhoSeguro =
+                Math.min(Math.max(tamanho, 1), 100);
+
+        String campoOrdenacao =
+                switch (ordenarPor == null ? "" : ordenarPor) {
+
+                    case "valorTotal", "criadoEm" ->
+                            ordenarPor;
+
+                    default ->
+                            "dataVenda";
+                };
+
+        Specification<Venda> filtros =
+                (root, query, builder) -> {
+
+                    List<Predicate> predicates =
+                            new ArrayList<>();
+
+                    if (inicio != null) {
+
+                        predicates.add(
+                                builder.greaterThanOrEqualTo(
+                                        root.get("dataVenda"),
+                                        inicio
+                                )
+                        );
+                    }
+
+                    if (fim != null) {
+
+                        predicates.add(
+                                builder.lessThanOrEqualTo(
+                                        root.get("dataVenda"),
+                                        fim
+                                )
+                        );
+                    }
+
+                    if (clienteId != null) {
+
+                        predicates.add(
+                                builder.equal(
+                                        root.get("cliente").get("id"),
+                                        clienteId
+                                )
+                        );
+                    }
+
+                    if (status != null) {
+
+                        predicates.add(
+                                builder.equal(
+                                        root.get("statusPagamento"),
+                                        status
+                                )
+                        );
+                    }
+
+                    return builder.and(
+                            predicates.toArray(Predicate[]::new)
+                    );
+                };
+
+        PageRequest pageable =
+                PageRequest.of(
+                        Math.max(pagina, 0),
+                        tamanhoSeguro,
+                        Sort.by(direcao, campoOrdenacao)
+                                .and(Sort.by(direcao, "id"))
+                );
+
+        Page<Venda> paginaEntidades =
+                vendaRepository.findAll(
+                        filtros,
+                        pageable
+                );
+
         if (paginaEntidades.isEmpty()) {
-            return new PageImpl<>(List.of(), pageable, paginaEntidades.getTotalElements());
+
+            return new PageImpl<>(
+                    List.of(),
+                    pageable,
+                    paginaEntidades.getTotalElements()
+            );
         }
-        List<Long> ids = paginaEntidades.getContent().stream().map(Venda::getId).toList();
-        Map<Long, Venda> detalhes = vendaRepository.buscarDetalhesPorIds(ids).stream()
-                .collect(Collectors.toMap(Venda::getId, Function.identity()));
-        List<VendaResponseDTO> registros = ids.stream().map(detalhes::get).map(this::toResponse).toList();
-        return new PageImpl<>(registros, pageable, paginaEntidades.getTotalElements());
+
+        List<Long> ids =
+                paginaEntidades
+                        .getContent()
+                        .stream()
+                        .map(Venda::getId)
+                        .toList();
+
+        Map<Long, Venda> detalhes =
+                vendaRepository
+                        .buscarDetalhesPorIds(ids)
+                        .stream()
+                        .collect(
+                                Collectors.toMap(
+                                        Venda::getId,
+                                        Function.identity()
+                                )
+                        );
+
+        List<VendaResponseDTO> registros =
+                ids.stream()
+                        .map(detalhes::get)
+                        .map(this::toResponse)
+                        .toList();
+
+        return new PageImpl<>(
+                registros,
+                pageable,
+                paginaEntidades.getTotalElements()
+        );
     }
 
-    public VendaResponseDTO buscar(Long usuarioId, Long id) {
+    public VendaResponseDTO buscar(
+            Long usuarioId,
+            Long id
+    ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
+
         Venda venda = buscarVenda(id);
+
         return toResponse(venda);
     }
 
     @Transactional(readOnly = true)
-    public VendaDetalhesResponseDTO buscarDetalhes(Long usuarioId, Long id) {
+    public VendaDetalhesResponseDTO buscarDetalhes(
+            Long usuarioId,
+            Long id
+    ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        Venda venda = vendaRepository.buscarDetalhesPorId(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Venda não encontrada"));
+
+        Venda venda =
+                vendaRepository.buscarDetalhesPorId(id)
+                        .orElseThrow(
+                                () -> new ResourceNotFoundException(
+                                        "Venda não encontrada"
+                                )
+                        );
+
         return toDetalhesResponse(venda);
     }
 
@@ -209,27 +517,86 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        PageRequest pageable = PageRequest.of(
-                Math.max(pagina, 0),
-                Math.min(Math.max(tamanho, 1), 100),
-                ordenacaoHistorico(ordenarPor, direcao));
-        Page<Venda> paginaEntidades = vendaRepository.findAll(
-                filtrosHistorico(busca, clienteId, produtoId, inicio, fim, status, forma, parcelada),
-                pageable);
+
+        PageRequest pageable =
+                PageRequest.of(
+                        Math.max(pagina, 0),
+                        Math.min(Math.max(tamanho, 1), 100),
+                        ordenacaoHistorico(
+                                ordenarPor,
+                                direcao
+                        )
+                );
+
+        Page<Venda> paginaEntidades =
+                vendaRepository.findAll(
+                        filtrosHistorico(
+                                busca,
+                                clienteId,
+                                produtoId,
+                                inicio,
+                                fim,
+                                status,
+                                forma,
+                                parcelada
+                        ),
+                        pageable
+                );
+
         if (paginaEntidades.isEmpty()) {
-            return new PageImpl<>(List.of(), pageable, paginaEntidades.getTotalElements());
+
+            return new PageImpl<>(
+                    List.of(),
+                    pageable,
+                    paginaEntidades.getTotalElements()
+            );
         }
-        List<Long> ids = paginaEntidades.getContent().stream().map(Venda::getId).toList();
-        Map<Long, BigDecimal> quantidades = vendaRepository.contarItensPorVendas(ids).stream()
-                .collect(Collectors.toMap(
-                        linha -> ((Number) linha[0]).longValue(),
-                        linha -> decimal(linha[1])));
-        List<VendaHistoricoItemResponseDTO> registros = paginaEntidades.getContent().stream()
-                .map(venda -> toHistoricoResponse(
-                        venda, quantidades.getOrDefault(venda.getId(), BigDecimal.ZERO)))
-                .toList();
-        return new PageImpl<>(registros, pageable, paginaEntidades.getTotalElements());
+
+        List<Long> ids =
+                paginaEntidades
+                        .getContent()
+                        .stream()
+                        .map(Venda::getId)
+                        .toList();
+
+        Map<Long, BigDecimal> quantidades =
+                vendaRepository
+                        .contarItensPorVendas(ids)
+                        .stream()
+                        .collect(
+                                Collectors.toMap(
+                                        linha ->
+                                                ((Number) linha[0])
+                                                        .longValue(),
+
+                                        linha ->
+                                                decimal(linha[1])
+                                )
+                        );
+
+        List<VendaHistoricoItemResponseDTO> registros =
+                paginaEntidades
+                        .getContent()
+                        .stream()
+                        .map(
+                                venda ->
+                                        toHistoricoResponse(
+                                                venda,
+                                                quantidades.getOrDefault(
+                                                        venda.getId(),
+                                                        BigDecimal.ZERO
+                                                )
+                                        )
+                        )
+                        .toList();
+
+        return new PageImpl<>(
+                registros,
+                pageable,
+                paginaEntidades.getTotalElements()
+        );
     }
 
     @Transactional(readOnly = true)
@@ -244,17 +611,44 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        String termo = normalizarBuscaResumo(busca);
-        ResumoHistoricoVendasProjection valores = vendaRepository.resumirHistoricoVendas(
-                termo, clienteId, produtoId, inicio, fim, status, forma, parcelada);
-        BigDecimal itens = vendaRepository.totalItensHistoricoVendas(
-                termo, clienteId, produtoId, inicio, fim, status, forma, parcelada);
+
+        String termo =
+                normalizarBuscaResumo(busca);
+
+        ResumoHistoricoVendasProjection valores =
+                vendaRepository.resumirHistoricoVendas(
+                        termo,
+                        clienteId,
+                        produtoId,
+                        inicio,
+                        fim,
+                        status,
+                        forma,
+                        parcelada
+                );
+
+        BigDecimal itens =
+                vendaRepository.totalItensHistoricoVendas(
+                        termo,
+                        clienteId,
+                        produtoId,
+                        inicio,
+                        fim,
+                        status,
+                        forma,
+                        parcelada
+                );
+
         return new ResumoHistoricoVendasResponseDTO(
                 decimal(valores.getFaturamento()),
                 numero(valores.getQuantidadeVendas()),
-                itens != null ? itens : BigDecimal.ZERO,
-                decimal(valores.getTicketMedio()));
+                itens != null
+                        ? itens
+                        : BigDecimal.ZERO,
+                decimal(valores.getTicketMedio())
+        );
     }
 
     @Transactional(readOnly = true)
@@ -272,23 +666,75 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        int tamanhoSeguro = Math.min(Math.max(tamanho, 1), 100);
-        Sort ordenacao = ordenacaoCobrancas(ordenarPor);
-        PageRequest pageable = PageRequest.of(Math.max(pagina, 0), tamanhoSeguro, ordenacao);
-        Page<Venda> paginaEntidades = vendaRepository.findAll(
-                filtrosCobrancas(busca, clienteId, produtoId, inicio, fim, situacao, forma, parcelada), pageable);
+
+        int tamanhoSeguro =
+                Math.min(Math.max(tamanho, 1), 100);
+
+        Sort ordenacao =
+                ordenacaoCobrancas(ordenarPor);
+
+        PageRequest pageable =
+                PageRequest.of(
+                        Math.max(pagina, 0),
+                        tamanhoSeguro,
+                        ordenacao
+                );
+
+        Page<Venda> paginaEntidades =
+                vendaRepository.findAll(
+                        filtrosCobrancas(
+                                busca,
+                                clienteId,
+                                produtoId,
+                                inicio,
+                                fim,
+                                situacao,
+                                forma,
+                                parcelada
+                        ),
+                        pageable
+                );
+
         if (paginaEntidades.isEmpty()) {
-            return new PageImpl<>(List.of(), pageable, paginaEntidades.getTotalElements());
+
+            return new PageImpl<>(
+                    List.of(),
+                    pageable,
+                    paginaEntidades.getTotalElements()
+            );
         }
-        List<Long> ids = paginaEntidades.getContent().stream().map(Venda::getId).toList();
-        Map<Long, Venda> detalhes = vendaRepository.buscarDetalhesPorIds(ids).stream()
-                .collect(Collectors.toMap(Venda::getId, Function.identity()));
-        List<CobrancaResponseDTO> registros = ids.stream()
-                .map(detalhes::get)
-                .map(this::toCobrancaResponse)
-                .toList();
-        return new PageImpl<>(registros, pageable, paginaEntidades.getTotalElements());
+
+        List<Long> ids =
+                paginaEntidades
+                        .getContent()
+                        .stream()
+                        .map(Venda::getId)
+                        .toList();
+
+        Map<Long, Venda> detalhes =
+                vendaRepository
+                        .buscarDetalhesPorIds(ids)
+                        .stream()
+                        .collect(
+                                Collectors.toMap(
+                                        Venda::getId,
+                                        Function.identity()
+                                )
+                        );
+
+        List<CobrancaResponseDTO> registros =
+                ids.stream()
+                        .map(detalhes::get)
+                        .map(this::toCobrancaResponse)
+                        .toList();
+
+        return new PageImpl<>(
+                registros,
+                pageable,
+                paginaEntidades.getTotalElements()
+        );
     }
 
     @Transactional(readOnly = true)
@@ -303,46 +749,97 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        LocalDate hoje = classificadorCobrancaService.hoje();
-        String buscaNormalizada = normalizarBuscaResumo(busca);
-        ResumoCobrancasProjection valores = vendaRepository.resumirCobrancas(
-                hoje,
-                hoje.minusDays(1),
-                hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_RECENTE_DIAS),
-                hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_RECENTE_DIAS + 1L),
-                hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_MEDIO_DIAS),
-                situacao != null ? situacao.name() : "",
-                buscaNormalizada,
-                clienteId,
-                produtoId,
-                inicio,
-                fim,
-                forma,
-                parcelada);
+
+        LocalDate hoje =
+                classificadorCobrancaService.hoje();
+
+        String buscaNormalizada =
+                normalizarBuscaResumo(busca);
+
+        ResumoCobrancasProjection valores =
+                vendaRepository.resumirCobrancas(
+                        hoje,
+                        hoje.minusDays(1),
+                        hoje.minusDays(
+                                ClassificadorCobrancaService
+                                        .LIMITE_ATRASO_RECENTE_DIAS
+                        ),
+                        hoje.minusDays(
+                                ClassificadorCobrancaService
+                                        .LIMITE_ATRASO_RECENTE_DIAS + 1L
+                        ),
+                        hoje.minusDays(
+                                ClassificadorCobrancaService
+                                        .LIMITE_ATRASO_MEDIO_DIAS
+                        ),
+                        situacao != null
+                                ? situacao.name()
+                                : "",
+                        buscaNormalizada,
+                        clienteId,
+                        produtoId,
+                        inicio,
+                        fim,
+                        forma,
+                        parcelada
+                );
+
         return new ResumoCobrancasResponseDTO(
                 decimal(valores.getTotalReceber()),
                 decimal(valores.getTotalVencido()),
                 decimal(valores.getTotalEmDia()),
                 numero(valores.getQuantidadeAtrasadas()),
-                numero(valores.getQuantidadeCobrancas()));
+                numero(valores.getQuantidadeCobrancas())
+        );
     }
 
     @Transactional
-    public VendaResponseDTO confirmarPagamento(Long usuarioId, Long vendaId) {
-        Usuario gestor = usuarioAcessoService.buscarGestor(usuarioId);
-        Venda venda = vendaRepository.buscarParaConfirmacao(vendaId)
-                .orElseThrow(() -> new ResourceNotFoundException("Cobrança não encontrada"));
-        if (venda.getStatusPagamento() == StatusPagamento.PAGO) {
-            throw new ConflictException("Esta cobrança já foi confirmada como paga");
+    public VendaResponseDTO confirmarPagamento(
+            Long usuarioId,
+            Long vendaId
+    ) {
+
+        Usuario gestor =
+                usuarioAcessoService.buscarGestor(usuarioId);
+
+        Venda venda =
+                vendaRepository.buscarParaConfirmacao(vendaId)
+                        .orElseThrow(
+                                () -> new ResourceNotFoundException(
+                                        "Cobrança não encontrada"
+                                )
+                        );
+
+        if (venda.getStatusPagamento()
+                == StatusPagamento.PAGO) {
+
+            throw new ConflictException(
+                    "Esta cobrança já foi confirmada como paga"
+            );
         }
-        if (venda.getStatusPagamento() != StatusPagamento.PENDENTE
-                && venda.getStatusPagamento() != StatusPagamento.ATRASADO) {
-            throw new BusinessException("Esta venda não possui uma cobrança pendente");
+
+        if (venda.getStatusPagamento()
+                != StatusPagamento.PENDENTE
+                && venda.getStatusPagamento()
+                != StatusPagamento.ATRASADO) {
+
+            throw new BusinessException(
+                    "Esta venda não possui uma cobrança pendente"
+            );
         }
-        StatusPagamento statusAnterior = venda.getStatusPagamento();
-        venda.setStatusPagamento(StatusPagamento.PAGO);
-        Venda salva = vendaRepository.save(venda);
+
+        StatusPagamento statusAnterior =
+                venda.getStatusPagamento();
+
+        venda.setStatusPagamento(
+                StatusPagamento.PAGO
+        );
+
+        Venda salva =
+                vendaRepository.save(venda);
+
         auditoriaService.registrar(
                 gestor,
                 "VENDA",
@@ -351,66 +848,174 @@ public class VendaService {
                 statusAnterior,
                 StatusPagamento.PAGO,
                 "Pagamento confirmado",
-                "A_RECEBER");
+                "A_RECEBER"
+        );
+
         return toResponse(salva);
     }
 
     @Transactional(readOnly = true)
-    public VendaDuplicacaoResponseDTO prepararDuplicacao(Long usuarioId, Long id) {
+    public VendaDuplicacaoResponseDTO prepararDuplicacao(
+            Long usuarioId,
+            Long id
+    ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        Venda venda = buscarVenda(id);
-        List<String> avisos = new ArrayList<>();
-        var itens = venda.getItens().stream().map(item -> {
-            Produto produto = item.getProduto();
-            if (item.getValorUnitario().compareTo(produto.getPrecoVenda()) != 0) {
-                avisos.add("O preço de " + produto.getNome() + " mudou de " + item.getValorUnitario() + " para " + produto.getPrecoVenda());
-            }
-            if (produto.getEstoqueAtual().compareTo(item.getQuantidade()) < 0) {
-                avisos.add("Estoque insuficiente para " + produto.getNome() + "; revise a quantidade antes de concluir");
-            }
-            return new VendaDuplicacaoResponseDTO.ItemDuplicacao(produto.getId(), produto.getNome(),
-                    item.getQuantidade(), item.getValorUnitario(), produto.getPrecoVenda(), produto.getEstoqueAtual());
-        }).toList();
-        return new VendaDuplicacaoResponseDTO(venda.getId(), venda.getCliente().getId(), venda.getCliente().getNome(), itens, avisos);
+
+        Venda venda =
+                buscarVenda(id);
+
+        List<String> avisos =
+                new ArrayList<>();
+
+        var itens =
+                venda.getItens()
+                        .stream()
+                        .map(item -> {
+
+                            Produto produto =
+                                    item.getProduto();
+
+                            if (item.getValorUnitario()
+                                    .compareTo(
+                                            produto.getPrecoVenda()
+                                    ) != 0) {
+
+                                avisos.add(
+                                        "O preço de "
+                                                + produto.getNome()
+                                                + " mudou de "
+                                                + item.getValorUnitario()
+                                                + " para "
+                                                + produto.getPrecoVenda()
+                                );
+                            }
+
+                            if (produto.getEstoqueAtual()
+                                    .compareTo(
+                                            item.getQuantidade()
+                                    ) < 0) {
+
+                                avisos.add(
+                                        "Estoque insuficiente para "
+                                                + produto.getNome()
+                                                + "; a venda ficará como PENDENTE"
+                                );
+                            }
+
+                            return new VendaDuplicacaoResponseDTO.ItemDuplicacao(
+                                    produto.getId(),
+                                    produto.getNome(),
+                                    item.getQuantidade(),
+                                    item.getValorUnitario(),
+                                    produto.getPrecoVenda(),
+                                    produto.getEstoqueAtual()
+                            );
+                        })
+                        .toList();
+
+        return new VendaDuplicacaoResponseDTO(
+                venda.getId(),
+                venda.getCliente().getId(),
+                venda.getCliente().getNome(),
+                itens,
+                avisos
+        );
     }
 
     @Transactional
-    public VendaResponseDTO adicionarContato(Long usuarioId, Long vendaId, ContatoRequestDTO dto) {
+    public VendaResponseDTO adicionarContato(
+            Long usuarioId,
+            Long vendaId,
+            ContatoRequestDTO dto
+    ) {
+
         usuarioAcessoService.buscarGestor(usuarioId);
-        Venda venda = buscarVenda(vendaId);
-        List<ContatoDTO> contatos = lerContatos(venda.getContatos());
-        contatos.add(ContatoDTO.builder()
-                .data(LocalDateTime.now())
-                .tipo(dto.getTipo())
-                .resposta(dto.getResposta())
-                .build());
-        venda.setContatos(escreverContatos(contatos));
-        return toResponse(vendaRepository.save(venda));
+
+        Venda venda =
+                buscarVenda(vendaId);
+
+        List<ContatoDTO> contatos =
+                lerContatos(venda.getContatos());
+
+        contatos.add(
+                ContatoDTO.builder()
+                        .data(LocalDateTime.now())
+                        .tipo(dto.getTipo())
+                        .resposta(dto.getResposta())
+                        .build()
+        );
+
+        venda.setContatos(
+                escreverContatos(contatos)
+        );
+
+        return toResponse(
+                vendaRepository.save(venda)
+        );
     }
 
     private Cliente buscarCliente(Long clienteId) {
+
         if (clienteId == null) {
-            throw new BusinessException("Selecione um cliente para registrar a venda");
+
+            throw new BusinessException(
+                    "Selecione um cliente para registrar a venda"
+            );
         }
-        return clienteRepository.findById(clienteId)
-                .orElseThrow(() -> new ResourceNotFoundException("Cliente não encontrado"));
+
+        return clienteRepository
+                .findById(clienteId)
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Cliente não encontrado"
+                        )
+                );
     }
 
-    private Produto buscarProdutoDoGestor(Long produtoId, Usuario gestor) {
-        return produtoRepository.findById(produtoId)
-                .orElseThrow(() -> new ResourceNotFoundException("Produto não encontrado"));
+    private Produto buscarProdutoDoGestor(
+            Long produtoId,
+            Usuario gestor
+    ) {
+
+        return produtoRepository
+                .findById(produtoId)
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Produto não encontrado"
+                        )
+                );
     }
 
-    private void baixarEstoque(Produto produto, BigDecimal quantidade) {
-        if (produto.getEstoqueAtual().compareTo(quantidade) < 0) {
-            throw new BusinessException("Estoque insuficiente para o produto " + produto.getNome());
+    private void baixarEstoque(
+            Produto produto,
+            BigDecimal quantidade
+    ) {
+
+        if (produto.getEstoqueAtual()
+                .compareTo(quantidade) < 0) {
+
+            throw new BusinessException(
+                    "Estoque insuficiente para o produto "
+                            + produto.getNome()
+            );
         }
-        produto.setEstoqueAtual(produto.getEstoqueAtual().subtract(quantidade));
+
+        produto.setEstoqueAtual(
+                produto.getEstoqueAtual()
+                        .subtract(quantidade)
+        );
     }
 
     private Venda buscarVenda(Long id) {
-        return vendaRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Venda não encontrada"));
+
+        return vendaRepository
+                .findById(id)
+                .orElseThrow(
+                        () -> new ResourceNotFoundException(
+                                "Venda não encontrada"
+                        )
+                );
     }
 
     private Specification<Venda> filtrosCobrancas(
@@ -423,46 +1028,174 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
-        LocalDate hoje = classificadorCobrancaService.hoje();
-        String termo = normalizarBusca(busca);
+
+        LocalDate hoje =
+                classificadorCobrancaService.hoje();
+
+        String termo =
+                normalizarBusca(busca);
+
         return (root, query, builder) -> {
-            List<Predicate> predicates = new ArrayList<>();
-            predicates.add(builder.equal(root.get("statusPagamento"), StatusPagamento.PENDENTE));
+
+            List<Predicate> predicates =
+                    new ArrayList<>();
+
+            predicates.add(
+                    builder.equal(
+                            root.get("statusPagamento"),
+                            StatusPagamento.PENDENTE
+                    )
+            );
+
             if (clienteId != null) {
-                predicates.add(builder.equal(root.get("cliente").get("id"), clienteId));
+
+                predicates.add(
+                        builder.equal(
+                                root.get("cliente").get("id"),
+                                clienteId
+                        )
+                );
             }
+
             if (inicio != null) {
-                predicates.add(builder.greaterThanOrEqualTo(root.get("dataVencimento"), inicio));
+
+                predicates.add(
+                        builder.greaterThanOrEqualTo(
+                                root.get("dataVencimento"),
+                                inicio
+                        )
+                );
             }
+
             if (fim != null) {
-                predicates.add(builder.lessThanOrEqualTo(root.get("dataVencimento"), fim));
+
+                predicates.add(
+                        builder.lessThanOrEqualTo(
+                                root.get("dataVencimento"),
+                                fim
+                        )
+                );
             }
-            if (forma != null) predicates.add(builder.equal(root.get("formaPagamento"), forma));
+
+            if (forma != null) {
+
+                predicates.add(
+                        builder.equal(
+                                root.get("formaPagamento"),
+                                forma
+                        )
+                );
+            }
+
             if (parcelada != null) {
-                Predicate possuiParcelas = builder.greaterThan(root.get("parcelas"), 1);
-                predicates.add(parcelada
-                        ? possuiParcelas
-                        : builder.or(builder.isNull(root.get("parcelas")), builder.lessThanOrEqualTo(root.get("parcelas"), 1)));
+
+                Predicate possuiParcelas =
+                        builder.greaterThan(
+                                root.get("parcelas"),
+                                1
+                        );
+
+                predicates.add(
+                        parcelada
+                                ? possuiParcelas
+                                : builder.or(
+                                        builder.isNull(
+                                                root.get("parcelas")
+                                        ),
+                                        builder.lessThanOrEqualTo(
+                                                root.get("parcelas"),
+                                                1
+                                        )
+                                )
+                );
             }
+
             if (produtoId != null) {
-                predicates.add(existeProduto(root, query.subquery(Long.class), produtoId, builder));
+
+                predicates.add(
+                        existeProduto(
+                                root,
+                                query.subquery(Long.class),
+                                produtoId,
+                                builder
+                        )
+                );
             }
+
             if (termo != null) {
-                String like = "%" + termo.toLowerCase() + "%";
-                Subquery<Long> produtoPorNome = query.subquery(Long.class);
-                Root<ItemVenda> item = produtoPorNome.from(ItemVenda.class);
-                produtoPorNome.select(item.get("id")).where(
-                        builder.equal(item.get("venda"), root),
-                        builder.like(builder.lower(item.get("produto").get("nome")), like));
-                predicates.add(builder.or(
-                        builder.like(builder.lower(root.get("cliente").get("nome")), like),
-                        builder.like(builder.lower(root.get("cliente").get("email")), like),
-                        builder.like(builder.lower(root.get("cliente").get("telefone")), like),
-                        builder.like(builder.lower(root.get("observacao")), like),
-                        builder.exists(produtoPorNome)));
+
+                String like =
+                        "%" + termo.toLowerCase() + "%";
+
+                Subquery<Long> produtoPorNome =
+                        query.subquery(Long.class);
+
+                Root<ItemVenda> item =
+                        produtoPorNome.from(ItemVenda.class);
+
+                produtoPorNome
+                        .select(item.get("id"))
+                        .where(
+                                builder.equal(
+                                        item.get("venda"),
+                                        root
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                item.get("produto")
+                                                        .get("nome")
+                                        ),
+                                        like
+                                )
+                        );
+
+                predicates.add(
+                        builder.or(
+                                builder.like(
+                                        builder.lower(
+                                                root.get("cliente")
+                                                        .get("nome")
+                                        ),
+                                        like
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                root.get("cliente")
+                                                        .get("email")
+                                        ),
+                                        like
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                root.get("cliente")
+                                                        .get("telefone")
+                                        ),
+                                        like
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                root.get("observacao")
+                                        ),
+                                        like
+                                ),
+                                builder.exists(
+                                        produtoPorNome
+                                )
+                        )
+                );
             }
-            adicionarFiltroSituacao(predicates, root, builder, situacao, hoje);
-            return builder.and(predicates.toArray(Predicate[]::new));
+
+            adicionarFiltroSituacao(
+                    predicates,
+                    root,
+                    builder,
+                    situacao,
+                    hoje
+            );
+
+            return builder.and(
+                    predicates.toArray(Predicate[]::new)
+            );
         };
     }
 
@@ -476,61 +1209,248 @@ public class VendaService {
             FormaPagamento forma,
             Boolean parcelada
     ) {
-        String termo = normalizarBusca(busca);
+
+        String termo =
+                normalizarBusca(busca);
+
         return (root, query, builder) -> {
-            List<Predicate> predicates = new ArrayList<>();
+
+            List<Predicate> predicates =
+                    new ArrayList<>();
+
             if (clienteId != null) {
-                predicates.add(builder.equal(root.get("cliente").get("id"), clienteId));
+
+                predicates.add(
+                        builder.equal(
+                                root.get("cliente").get("id"),
+                                clienteId
+                        )
+                );
             }
-            if (inicio != null) predicates.add(builder.greaterThanOrEqualTo(root.get("dataVenda"), inicio));
-            if (fim != null) predicates.add(builder.lessThanOrEqualTo(root.get("dataVenda"), fim));
-            if (status != null) predicates.add(builder.equal(root.get("statusPagamento"), status));
-            if (forma != null) predicates.add(builder.equal(root.get("formaPagamento"), forma));
+
+            if (inicio != null) {
+
+                predicates.add(
+                        builder.greaterThanOrEqualTo(
+                                root.get("dataVenda"),
+                                inicio
+                        )
+                );
+            }
+
+            if (fim != null) {
+
+                predicates.add(
+                        builder.lessThanOrEqualTo(
+                                root.get("dataVenda"),
+                                fim
+                        )
+                );
+            }
+
+            if (status != null) {
+
+                predicates.add(
+                        builder.equal(
+                                root.get("statusPagamento"),
+                                status
+                        )
+                );
+            }
+
+            if (forma != null) {
+
+                predicates.add(
+                        builder.equal(
+                                root.get("formaPagamento"),
+                                forma
+                        )
+                );
+            }
+
             if (parcelada != null) {
-                Predicate possuiParcelas = builder.greaterThan(root.get("parcelas"), 1);
-                predicates.add(parcelada
-                        ? possuiParcelas
-                        : builder.or(builder.isNull(root.get("parcelas")), builder.lessThanOrEqualTo(root.get("parcelas"), 1)));
+
+                Predicate possuiParcelas =
+                        builder.greaterThan(
+                                root.get("parcelas"),
+                                1
+                        );
+
+                predicates.add(
+                        parcelada
+                                ? possuiParcelas
+                                : builder.or(
+                                        builder.isNull(
+                                                root.get("parcelas")
+                                        ),
+                                        builder.lessThanOrEqualTo(
+                                                root.get("parcelas"),
+                                                1
+                                        )
+                                )
+                );
             }
+
             if (produtoId != null) {
-                predicates.add(existeProduto(root, query.subquery(Long.class), produtoId, builder));
+
+                predicates.add(
+                        existeProduto(
+                                root,
+                                query.subquery(Long.class),
+                                produtoId,
+                                builder
+                        )
+                );
             }
+
             if (termo != null) {
-                String like = "%" + termo.toLowerCase() + "%";
-                Subquery<Long> produtoPorNome = query.subquery(Long.class);
-                Root<ItemVenda> item = produtoPorNome.from(ItemVenda.class);
-                produtoPorNome.select(item.get("id")).where(
-                        builder.equal(item.get("venda"), root),
-                        builder.like(builder.lower(item.get("produto").get("nome")), like));
-                predicates.add(builder.or(
-                        builder.like(builder.lower(root.get("cliente").get("nome")), like),
-                        builder.like(builder.lower(root.get("observacao")), like),
-                        builder.exists(produtoPorNome)));
+
+                String like =
+                        "%" + termo.toLowerCase() + "%";
+
+                Subquery<Long> produtoPorNome =
+                        query.subquery(Long.class);
+
+                Root<ItemVenda> item =
+                        produtoPorNome.from(ItemVenda.class);
+
+                produtoPorNome
+                        .select(item.get("id"))
+                        .where(
+                                builder.equal(
+                                        item.get("venda"),
+                                        root
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                item.get("produto")
+                                                        .get("nome")
+                                        ),
+                                        like
+                                )
+                        );
+
+                predicates.add(
+                        builder.or(
+                                builder.like(
+                                        builder.lower(
+                                                root.get("cliente")
+                                                        .get("nome")
+                                        ),
+                                        like
+                                ),
+                                builder.like(
+                                        builder.lower(
+                                                root.get("observacao")
+                                        ),
+                                        like
+                                ),
+                                builder.exists(
+                                        produtoPorNome
+                                )
+                        )
+                );
             }
-            return builder.and(predicates.toArray(Predicate[]::new));
+
+            return builder.and(
+                    predicates.toArray(Predicate[]::new)
+            );
         };
     }
 
-    private Sort ordenacaoHistorico(String ordenarPor, Sort.Direction direcao) {
-        String campo = switch (ordenarPor == null ? "" : ordenarPor) {
-            case "valorTotal" -> "valorTotal";
-            case "cliente" -> "cliente.nome";
-            case "statusPagamento" -> "statusPagamento";
-            default -> "dataVenda";
-        };
-        return Sort.by(direcao, campo).and(Sort.by(direcao, "id"));
+    private Sort ordenacaoHistorico(
+            String ordenarPor,
+            Sort.Direction direcao
+    ) {
+
+        String campo =
+                switch (
+                        ordenarPor == null
+                                ? ""
+                                : ordenarPor
+                ) {
+
+                    case "valorTotal" ->
+                            "valorTotal";
+
+                    case "cliente" ->
+                            "cliente.nome";
+
+                    case "statusPagamento" ->
+                            "statusPagamento";
+
+                    default ->
+                            "dataVenda";
+                };
+
+        return Sort.by(
+                        direcao,
+                        campo
+                )
+                .and(
+                        Sort.by(
+                                direcao,
+                                "id"
+                        )
+                );
+    }
+
+    private Sort ordenacaoCobrancas(
+            String ordenarPor
+    ) {
+
+        String campo =
+                switch (
+                        ordenarPor == null
+                                ? ""
+                                : ordenarPor
+                ) {
+
+                    case "cliente" ->
+                            "cliente.nome";
+
+                    case "valorTotal" ->
+                            "valorTotal";
+
+                    default ->
+                            "dataVencimento";
+                };
+
+        return Sort.by(
+                        Sort.Direction.ASC,
+                        campo
+                )
+                .and(
+                        Sort.by(
+                                Sort.Direction.ASC,
+                                "id"
+                        )
+                );
     }
 
     private Predicate existeProduto(
-            Root<Venda> venda,
+            Root<Venda> root,
             Subquery<Long> subquery,
             Long produtoId,
             jakarta.persistence.criteria.CriteriaBuilder builder
     ) {
-        Root<ItemVenda> item = subquery.from(ItemVenda.class);
-        subquery.select(item.get("id")).where(
-                builder.equal(item.get("venda"), venda),
-                builder.equal(item.get("produto").get("id"), produtoId));
+
+        Root<ItemVenda> item =
+                subquery.from(ItemVenda.class);
+
+        subquery
+                .select(item.get("id"))
+                .where(
+                        builder.equal(
+                                item.get("venda"),
+                                root
+                        ),
+                        builder.equal(
+                                item.get("produto").get("id"),
+                                produtoId
+                        )
+                );
+
         return builder.exists(subquery);
     }
 
@@ -541,173 +1461,463 @@ public class VendaService {
             SituacaoCobranca situacao,
             LocalDate hoje
     ) {
-        if (situacao == null) return;
-        switch (situacao) {
-            case EM_DIA -> predicates.add(builder.greaterThanOrEqualTo(root.get("dataVencimento"), hoje));
-            case ATRASO_RECENTE -> predicates.add(builder.between(
-                    root.get("dataVencimento"),
-                    hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_RECENTE_DIAS),
-                    hoje.minusDays(1)));
-            case ATRASO_MEDIO -> predicates.add(builder.between(
-                    root.get("dataVencimento"),
-                    hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_MEDIO_DIAS),
-                    hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_RECENTE_DIAS + 1L)));
-            case MUITO_ATRASADO -> predicates.add(builder.lessThan(
-                    root.get("dataVencimento"),
-                    hoje.minusDays(ClassificadorCobrancaService.LIMITE_ATRASO_MEDIO_DIAS)));
-        }
-    }
 
-    private Sort ordenacaoCobrancas(String ordenarPor) {
-        return switch (ordenarPor == null ? "" : ordenarPor) {
-            case "maiorValor" -> Sort.by(Sort.Direction.DESC, "valorTotal").and(Sort.by("id"));
-            case "menorValor" -> Sort.by("valorTotal").and(Sort.by("id"));
-            case "cliente" -> Sort.by("cliente.nome").and(Sort.by("id"));
-            case "vencimentoProximo" -> Sort.by("dataVencimento").and(Sort.by("id"));
-            case "vencimentoAntigo", "maiorAtraso" ->
-                    Sort.by("dataVencimento").and(Sort.by("id"));
-            default -> Sort.by("dataVencimento").and(Sort.by("id"));
-        };
+        if (situacao == null) {
+            return;
+        }
+
+        switch (situacao) {
+
+            case EM_DIA -> {
+
+                predicates.add(
+                        builder.or(
+                                builder.isNull(
+                                        root.get("dataVencimento")
+                                ),
+                                builder.greaterThanOrEqualTo(
+                                        root.get("dataVencimento"),
+                                        hoje
+                                )
+                        )
+                );
+            }
+
+            case ATRASO_RECENTE -> {
+
+                predicates.add(
+                        builder.and(
+                                builder.lessThan(
+                                        root.get("dataVencimento"),
+                                        hoje
+                                ),
+                                builder.greaterThanOrEqualTo(
+                                        root.get("dataVencimento"),
+                                        hoje.minusDays(
+                                                ClassificadorCobrancaService
+                                                        .LIMITE_ATRASO_RECENTE_DIAS
+                                        )
+                                )
+                        )
+                );
+            }
+
+            case ATRASO_MEDIO -> {
+
+                predicates.add(
+                        builder.and(
+                                builder.lessThan(
+                                        root.get("dataVencimento"),
+                                        hoje.minusDays(
+                                                ClassificadorCobrancaService
+                                                        .LIMITE_ATRASO_RECENTE_DIAS
+                                        )
+                                ),
+                                builder.greaterThanOrEqualTo(
+                                        root.get("dataVencimento"),
+                                        hoje.minusDays(
+                                                ClassificadorCobrancaService
+                                                        .LIMITE_ATRASO_MEDIO_DIAS
+                                        )
+                                )
+                        )
+                );
+            }
+
+            case MUITO_ATRASADO -> {
+
+                predicates.add(
+                        builder.lessThan(
+                                root.get("dataVencimento"),
+                                hoje.minusDays(
+                                        ClassificadorCobrancaService
+                                                .LIMITE_ATRASO_MEDIO_DIAS
+                                )
+                        )
+                );
+            }
+        }
     }
 
     private String normalizarBusca(String busca) {
-        if (busca == null || busca.isBlank()) return null;
+
+        if (busca == null
+                || busca.trim().isEmpty()) {
+
+            return null;
+        }
+
         return busca.trim();
     }
 
-    private String normalizarBuscaResumo(String busca) {
-        return busca == null ? "" : busca.trim();
+    private String normalizarBuscaResumo(
+            String busca
+    ) {
+
+        String termo =
+                normalizarBusca(busca);
+
+        return termo != null
+                ? termo
+                : "";
     }
 
+    /*
+     * Aceita BigDecimal, Number e Object.
+     *
+     * Isso corrige o erro:
+     * Object cannot be converted to BigDecimal.
+     */
     private BigDecimal decimal(Object valor) {
-        return valor instanceof BigDecimal decimal ? decimal : BigDecimal.ZERO;
+
+        if (valor == null) {
+            return BigDecimal.ZERO;
+        }
+
+        if (valor instanceof BigDecimal bigDecimal) {
+            return bigDecimal;
+        }
+
+        if (valor instanceof Number number) {
+            return BigDecimal.valueOf(
+                    number.doubleValue()
+            );
+        }
+
+        try {
+            return new BigDecimal(
+                    valor.toString()
+            );
+        } catch (NumberFormatException e) {
+            return BigDecimal.ZERO;
+        }
     }
 
-    private long numero(Object valor) {
-        return valor instanceof Number numero ? numero.longValue() : 0;
+    private Integer numero(Number valor) {
+
+        return valor != null
+                ? valor.intValue()
+                : 0;
     }
 
-    private List<ContatoDTO> lerContatos(String json) {
-        if (json == null || json.isBlank()) {
+    private List<ContatoDTO> lerContatos(
+            String json
+    ) {
+
+        if (json == null
+                || json.trim().isEmpty()) {
+
             return new ArrayList<>();
         }
+
         try {
-            return objectMapper.readValue(json, new TypeReference<List<ContatoDTO>>() {});
+
+            return objectMapper.readValue(
+                    json,
+                    new TypeReference<List<ContatoDTO>>() {}
+            );
+
         } catch (Exception e) {
+
             return new ArrayList<>();
         }
     }
 
-    private String escreverContatos(List<ContatoDTO> contatos) {
+    private String escreverContatos(
+            List<ContatoDTO> contatos
+    ) {
+
         try {
-            return objectMapper.writeValueAsString(contatos);
+
+            return objectMapper.writeValueAsString(
+                    contatos
+            );
+
         } catch (Exception e) {
+
             return "[]";
         }
     }
 
-    private VendaResponseDTO toResponse(Venda venda) {
-        boolean emAtraso = venda.getStatusPagamento() == StatusPagamento.PENDENTE
-                && venda.getDataVencimento() != null
-                && venda.getDataVencimento().isBefore(LocalDate.now());
+    private Boolean calcularEmAtraso(
+            Venda venda
+    ) {
+
+        if (venda.getStatusPagamento()
+                == StatusPagamento.PAGO) {
+
+            return false;
+        }
+
+        if (venda.getDataVencimento() == null) {
+            return false;
+        }
+
+        return venda.getDataVencimento()
+                .isBefore(
+                        classificadorCobrancaService.hoje()
+                );
+    }
+
+    private String obterGestorNome(
+            Venda venda
+    ) {
+
+        if (venda.getGestor() == null) {
+            return null;
+        }
+
+        return venda.getGestor().getNome();
+    }
+
+    private List<ItemVendaResponseDTO> criarItensResponse(
+            Venda venda
+    ) {
+
+        return venda.getItens()
+                .stream()
+                .map(item ->
+                        ItemVendaResponseDTO.builder()
+                                .id(item.getId())
+                                .produtoId(
+                                        item.getProduto().getId()
+                                )
+                                .produtoNome(
+                                        item.getProduto().getNome()
+                                )
+                                .quantidade(
+                                        item.getQuantidade()
+                                )
+                                .valorUnitario(
+                                        item.getValorUnitario()
+                                )
+                                .valorTotal(
+                                        item.getValorTotal()
+                                )
+                                .custoConsiderado(
+                                        item.getCustoConsiderado()
+                                )
+                                .build()
+                )
+                .toList();
+    }
+
+    private VendaResponseDTO toResponse(
+            Venda venda
+    ) {
+
+        List<ItemVendaResponseDTO> itens =
+                criarItensResponse(venda);
 
         return VendaResponseDTO.builder()
                 .id(venda.getId())
-                .clienteId(venda.getCliente() != null ? venda.getCliente().getId() : null)
-                .clienteNome(venda.getCliente() != null ? venda.getCliente().getNome() : null)
-                .dataVenda(venda.getDataVenda())
-                .formaPagamento(venda.getFormaPagamento())
-                .statusPagamento(venda.getStatusPagamento())
-                .valorTotal(venda.getValorTotal())
-                .observacao(venda.getObservacao())
-                .dataVencimento(venda.getDataVencimento())
-                .tipoCartao(venda.getTipoCartao())
-                .parcelas(venda.getParcelas())
-                .emAtraso(emAtraso)
-                .contatos(lerContatos(venda.getContatos()))
-                .criadoEm(venda.getCriadoEm())
-                .itens(venda.getItens().stream().map(this::toItemResponse).toList())
+                .clienteId(
+                        venda.getCliente().getId()
+                )
+                .clienteNome(
+                        venda.getCliente().getNome()
+                )
+                .dataVenda(
+                        venda.getDataVenda()
+                )
+                .formaPagamento(
+                        venda.getFormaPagamento()
+                )
+                .statusPagamento(
+                        venda.getStatusPagamento()
+                )
+                .valorTotal(
+                        venda.getValorTotal()
+                )
+                .observacao(
+                        venda.getObservacao()
+                )
+                .dataVencimento(
+                        venda.getDataVencimento()
+                )
+                .tipoCartao(
+                        venda.getTipoCartao()
+                )
+                .parcelas(
+                        venda.getParcelas()
+                )
+                .emAtraso(
+                        calcularEmAtraso(venda)
+                )
+                .contatos(
+                        lerContatos(
+                                venda.getContatos()
+                        )
+                )
+                .criadoEm(
+                        venda.getCriadoEm()
+                )
+                .itens(itens)
                 .build();
     }
 
-    private CobrancaResponseDTO toCobrancaResponse(Venda venda) {
-        Cliente cliente = venda.getCliente();
-        return CobrancaResponseDTO.builder()
-                .id(venda.getId())
-                .clienteId(cliente != null ? cliente.getId() : null)
-                .clienteNome(cliente != null ? cliente.getNome() : null)
-                .clienteTelefone(cliente != null ? cliente.getTelefone() : null)
-                .clienteEmail(cliente != null ? cliente.getEmail() : null)
-                .descricao(venda.getObservacao())
-                .dataVenda(venda.getDataVenda())
-                .dataVencimento(venda.getDataVencimento())
-                .valor(venda.getValorTotal())
-                .formaPagamento(venda.getFormaPagamento())
-                .parcelas(venda.getParcelas())
-                .diasAtraso(classificadorCobrancaService.calcularDiasAtraso(
-                        venda.getDataVencimento(), venda.getStatusPagamento()))
-                .situacao(classificadorCobrancaService.classificar(
-                        venda.getDataVencimento(), venda.getStatusPagamento()))
-                .gestorNome(venda.getGestor() != null ? venda.getGestor().getNome() : null)
-                .itens(venda.getItens().stream().map(this::toItemResponse).toList())
-                .build();
-    }
+    private VendaDetalhesResponseDTO toDetalhesResponse(
+            Venda venda
+    ) {
 
-    private VendaHistoricoItemResponseDTO toHistoricoResponse(Venda venda, BigDecimal quantidadeItens) {
-        boolean emAtraso = venda.getStatusPagamento() == StatusPagamento.PENDENTE
-                && venda.getDataVencimento() != null
-                && venda.getDataVencimento().isBefore(classificadorCobrancaService.hoje());
-        return VendaHistoricoItemResponseDTO.builder()
-                .id(venda.getId())
-                .dataVenda(venda.getDataVenda())
-                .clienteId(venda.getCliente() != null ? venda.getCliente().getId() : null)
-                .clienteNome(venda.getCliente() != null ? venda.getCliente().getNome() : null)
-                .quantidadeItens(quantidadeItens)
-                .valorTotal(venda.getValorTotal())
-                .formaPagamento(venda.getFormaPagamento())
-                .parcelas(venda.getParcelas())
-                .statusPagamento(venda.getStatusPagamento())
-                .emAtraso(emAtraso)
-                .build();
-    }
+        List<ItemVendaResponseDTO> itens =
+                criarItensResponse(venda);
 
-    private VendaDetalhesResponseDTO toDetalhesResponse(Venda venda) {
-        Cliente cliente = venda.getCliente();
-        boolean emAtraso = venda.getStatusPagamento() == StatusPagamento.PENDENTE
-                && venda.getDataVencimento() != null
-                && venda.getDataVencimento().isBefore(classificadorCobrancaService.hoje());
         return VendaDetalhesResponseDTO.builder()
                 .id(venda.getId())
-                .clienteId(cliente != null ? cliente.getId() : null)
-                .clienteNome(cliente != null ? cliente.getNome() : null)
-                .clienteTelefone(cliente != null ? cliente.getTelefone() : null)
-                .clienteEmail(cliente != null ? cliente.getEmail() : null)
-                .clienteDocumento(cliente != null ? cliente.getDocumento() : null)
-                .dataVenda(venda.getDataVenda())
-                .formaPagamento(venda.getFormaPagamento())
-                .statusPagamento(venda.getStatusPagamento())
-                .valorTotal(venda.getValorTotal())
-                .observacao(venda.getObservacao())
-                .dataVencimento(venda.getDataVencimento())
-                .tipoCartao(venda.getTipoCartao())
-                .parcelas(venda.getParcelas())
-                .emAtraso(emAtraso)
-                .gestorNome(venda.getGestor() != null ? venda.getGestor().getNome() : null)
-                .contatos(lerContatos(venda.getContatos()))
-                .criadoEm(venda.getCriadoEm())
-                .itens(venda.getItens().stream().map(this::toItemResponse).toList())
+                .clienteId(
+                        venda.getCliente().getId()
+                )
+                .clienteNome(
+                        venda.getCliente().getNome()
+                )
+                .clienteTelefone(
+                        venda.getCliente().getTelefone()
+                )
+                .clienteEmail(
+                        venda.getCliente().getEmail()
+                )
+                .clienteDocumento(null)
+                .dataVenda(
+                        venda.getDataVenda()
+                )
+                .formaPagamento(
+                        venda.getFormaPagamento()
+                )
+                .statusPagamento(
+                        venda.getStatusPagamento()
+                )
+                .valorTotal(
+                        venda.getValorTotal()
+                )
+                .observacao(
+                        venda.getObservacao()
+                )
+                .dataVencimento(
+                        venda.getDataVencimento()
+                )
+                .tipoCartao(
+                        venda.getTipoCartao()
+                )
+                .parcelas(
+                        venda.getParcelas()
+                )
+                .emAtraso(
+                        calcularEmAtraso(venda)
+                )
+                .gestorNome(
+                        obterGestorNome(venda)
+                )
+                .contatos(
+                        lerContatos(
+                                venda.getContatos()
+                        )
+                )
+                .criadoEm(
+                        venda.getCriadoEm()
+                )
+                .itens(itens)
                 .build();
     }
 
-    private ItemVendaResponseDTO toItemResponse(ItemVenda item) {
-        return ItemVendaResponseDTO.builder()
-                .id(item.getId())
-                .produtoId(item.getProduto().getId())
-                .produtoNome(item.getProduto().getNome())
-                .quantidade(item.getQuantidade())
-                .valorUnitario(item.getValorUnitario())
-                .valorTotal(item.getValorTotal())
-                .custoConsiderado(item.getCustoConsiderado())
+    private VendaHistoricoItemResponseDTO toHistoricoResponse(
+            Venda venda,
+            BigDecimal totalItens
+    ) {
+
+        return VendaHistoricoItemResponseDTO.builder()
+                .id(venda.getId())
+                .dataVenda(
+                        venda.getDataVenda()
+                )
+                .clienteId(
+                        venda.getCliente().getId()
+                )
+                .clienteNome(
+                        venda.getCliente().getNome()
+                )
+                .quantidadeItens(
+                        totalItens
+                )
+                .valorTotal(
+                        venda.getValorTotal()
+                )
+                .formaPagamento(
+                        venda.getFormaPagamento()
+                )
+                .parcelas(
+                        venda.getParcelas()
+                )
+                .statusPagamento(
+                        venda.getStatusPagamento()
+                )
+                .emAtraso(
+                        calcularEmAtraso(venda)
+                )
+                .build();
+    }
+
+    private CobrancaResponseDTO toCobrancaResponse(
+            Venda venda
+    ) {
+
+        SituacaoCobranca situacao =
+                classificadorCobrancaService.classificar(
+                        venda.getDataVencimento(),
+                        venda.getStatusPagamento()
+                );
+
+        long diasAtraso =
+                classificadorCobrancaService.calcularDiasAtraso(
+                        venda.getDataVencimento(),
+                        venda.getStatusPagamento()
+                );
+
+        List<ItemVendaResponseDTO> itens =
+                criarItensResponse(venda);
+
+        return CobrancaResponseDTO.builder()
+                .id(venda.getId())
+                .clienteId(
+                        venda.getCliente().getId()
+                )
+                .clienteNome(
+                        venda.getCliente().getNome()
+                )
+                .clienteTelefone(
+                        venda.getCliente().getTelefone()
+                )
+                .clienteEmail(
+                        venda.getCliente().getEmail()
+                )
+                .descricao(
+                        venda.getObservacao()
+                )
+                .dataVenda(
+                        venda.getDataVenda()
+                )
+                .dataVencimento(
+                        venda.getDataVencimento()
+                )
+                .valor(
+                        venda.getValorTotal()
+                )
+                .formaPagamento(
+                        venda.getFormaPagamento()
+                )
+                .parcelas(
+                        venda.getParcelas()
+                )
+                .diasAtraso(
+                        diasAtraso
+                )
+                .situacao(
+                        situacao
+                )
+                .gestorNome(
+                        obterGestorNome(venda)
+                )
+                .itens(itens)
                 .build();
     }
 }
